death_star/allow-only-targeting-to-laser.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-only-targeting-to-laser
  namespace: weapon-systems
spec:
  selector:
    matchLabels:
      app: energy-allocation
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/weapon-systems/sa/targeting-service"]
  # Only the targeting service can trigger energy allocation.
